--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,8 @@ serde_json = "1"
 serde_yaml = "0.9"
 similar = "2"
 termcolor = "1"
+thiserror = "1"
+
 
 [dependencies.serde]
 version = "1"
@@ -32,6 +34,10 @@ features = ["json"]
 [dependencies.tokio]
 version = "1"
 features = ["full"]
+
+[dependencies.strum]
+version = "0.25"
+features = ["derive"]
 
 [dev-dependencies]
 regex = "1"
