--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,9 @@
 [package]
 name = "aws-regional-product-services"
-version = "0.2.2"
+version = "0.2.3"
 edition = "2021"
 license = "MIT OR Apache-2.0"
-description = "AWS Regional Product Services CLI"
+description = "list/diff of AWS services by regions"
 repository = "https://github.com/masinc/aws-regional-product-services"
 readme = "README.md"
 keywords = ["aws", "cli"]
