--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ categories = ["command-line-interface"]
 [dependencies]
 anyhow = "1"
 async-trait = "0.1"
+chrono = "0.4"
 clap = { version = "4", features = ["derive"] }
 dirs = "5"
 once_cell = "1"
