feat: add minor release tasks to Taskfile.yaml

--- a/Taskfile.yaml
+++ b/Taskfile.yaml
@@ -25,3 +25,9 @@ tasks:
   release.patch.exec:
     cmds:
       - cargo release patch --execute
+  release.minor:
+    cmds:
+      - cargo release minor
+  release.minor.exec:
+    cmds:
+      - cargo release minor --execute
